<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".menu.UpdateActivity"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <LinearLayout android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="3mm">
        <TextView style="@style/item" android:text="@string/address"/>
        <EditText style="@style/item" android:id="@+id/address"/>
        <TextView style="@style/item" android:text="@string/port"/>
        <EditText style="@style/item" android:id="@+id/port" android:inputType="number"/>
        <TextView style="@style/item" android:text="@string/secret"/>
        <EditText style="@style/item" android:id="@+id/secret" android:password="true"/>
        <Button style="@style/item" android:id="@+id/connect" android:text="@string/connect" android:onClick="connect"/>
        <Button style="@style/item" android:id="@+id/disconnect" android:text="@string/disconnect" android:onClick="connect"/>
    </LinearLayout>
</ScrollView>